load("@bazel_skylib//rules:common_settings.bzl",
     "bool_flag", "string_flag")

load("@bazel_skylib//rules:copy_file.bzl", "copy_file")

load("//vendored/lemon:BUILD.bzl", "lemon")

exports_files(glob(["*.c"]))

filegroup(
    name = "mkhdrs_srcs",
    srcs = glob(["*.c"]),
    visibility = ["//visibility:public"]
)

filegroup(
    name = "srcs",
    srcs = glob(["emit*.c", "meta*.c"]),
    visibility = ["//visibility:public"]
)

CMD_FLAGS = [
    "-std=c11",
    "-pedantic-errors",
    "-Wno-unused-variable"  # warning from lemon-generated code meta_syntaxis
] + select({
    "//bzl/host:linux": [
        "-D_POSIX_C_SOURCE=200809L", ## strdup, strndup
        "-D_DEFAULT_SOURCE",        ## DT_ constants from dirent.h
    ],
    "//conditions:default":   []
})

cc_library(
    name = "findlib",
    # alwayslink = True,
    srcs = [
        "emit_build_bazel.c", "emit_build_bazel.h",
        "emit_jsoo.c", "emit_jsoo.h",
        "emit_ocaml_repo.c", "emit_ocaml_repo.h",

        "emit_pkg_bindir.c", "//src/hdrs:emit_pkg_bindir.h",

        "handlers_findlib.c", "//src/hdrs:handlers_findlib.h",

        "meta_parser.c", "meta_parser.h",
        "meta_entries.c", "meta_entries.h",
        "meta_flags.c", "meta_flags.h",
        "meta_lexis.c", "meta_lexis.h",
        "meta_packages.c", "meta_packages.h",
        "meta_properties.c", "meta_properties.h",
        "meta_settings.c", "meta_settings.h",
        "meta_values.c", "meta_values.h",

        # "emit_build_bazel.h",
        # "emit_ocaml_repo.h",
        # "emit_pkg_bindir.h",
        # "meta_parser.h",
        # "meta_entries.h",
        # "meta_flags.h",
        # "meta_lexis.h",
        # "meta_packages.h",
        # "meta_properties.h",
        # "meta_settings.h",
        # "meta_values.h",

        # "//src/hdrs",

        # "//src:config.c",
        # "//src:config.h",
        # "//src:config_bazel.c",
        # "//src:config_bazel.h",
        # "//src:config_mibl.c",
        # "//src:config_mibl.h",
        # "//src:config_opam.c",
        # "//src:config_opam.h",
        # "//src:utils.c",
        # "//src:utils.h",
        # "//src:log.c",
        # "//vendored/logc:log.h",
        "//vendored/uthash:utarray.h",
        "//vendored/uthash:uthash.h",
        "//vendored/uthash:utstring.h",
    ] + select({
        "//bzl/host:linux": [
            "//src/linux:strlcat.c",
            "//src/linux:strlcpy.c",
            "//src/linux:strnstr.c"
        ],
        "//conditions:default":   []
    }) + select({
        "//compilation_mode:dbg?": [
            "debug_meta.c", "//src/hdrs:debug_meta.h",
            "debug_findlib.c", "//src/hdrs:debug_findlib.h"
        ],
        "//conditions:default": []
    }),
    hdrs = [
        # "libfindlib.h",
        # "log.h",
    ],
    copts = [
        "-Isrc",
        "-Iexternal/mibl/src",
        "-I$(GENDIR)/src",
        "-I$(GENDIR)/external/mibl/src",

        "-Ivendored/logc",
        "-Iexternal/mibl/vendored/logc",

        "-Ivendored/uthash",
        "-Iexternal/mibl/vendored/uthash",

        # "-Isrc/hdrs",
        "-I$(GENDIR)/src/hdrs",
        "-I$(GENDIR)/external/mibl/src/hdrs",

        "-Isrc/dune",
        "-Iexternal/mibl/src/dune",
        "-I$(GENDIR)/src/dune",
        "-I$(GENDIR)/external/mibl/src/dune",

        "-Isrc/findlib",
        "-I$(GENDIR)/src/findlib",

        "-Iexternal/mibl/src/findlib",
        "-I$(GENDIR)/external/mibl/src/findlib",

        # "-Iexternal/libs7/src",
        # "-Iexternal/libinih",
    ],
    defines = select({
        "//compilation_mode:dbg?": ["DEBUG_TRACE", "DEBUG_MIBL"],
        "//conditions:default":   []
    }),
    data  = [
        "//coswitch/templates:ocaml_bigarray.BUILD",
        "//coswitch/templates:ocaml_c_api.BUILD",
        "//coswitch/templates:ocaml_compiler-libs.BUILD",
        "//coswitch/templates/compiler_libs:bytecomp.BUILD",
        "//coswitch/templates/compiler_libs:common.BUILD",
        "//coswitch/templates/compiler_libs:optcomp.BUILD",
        "//coswitch/templates/compiler_libs:toplevel.BUILD",
        "//coswitch/templates/compiler_libs:native_toplevel.BUILD",
        "//coswitch/templates:ocaml_dynlink.BUILD",
        "//coswitch/templates:ocaml_num.BUILD",
        "//coswitch/templates:ocaml_ocamldoc.BUILD",
        "//coswitch/templates:ocaml_runtime.BUILD",
        "//coswitch/templates:ocaml_stdlib.BUILD",
        "//coswitch/templates:ocaml_str.BUILD",

        "//coswitch/templates/platforms:BUILD.bazel",
        "//coswitch/templates/platforms/build:BUILD.bazel",
        "//coswitch/templates/platforms/target:BUILD.bazel",

        "//coswitch/templates:toolchain/adapters/local.BUILD",
        "//coswitch/templates:toolchain/adapters/linux/x86_64.BUILD",
        "//coswitch/templates:toolchain/adapters/linux/arm.BUILD",
        "//coswitch/templates:toolchain/adapters/macos/x86_64.BUILD",
        "//coswitch/templates:toolchain/adapters/macos/arm.BUILD",
        "//coswitch/templates:toolchain/profiles/profiles.BUILD",
        "//coswitch/templates:toolchain/selectors/local.BUILD",
        "//coswitch/templates:toolchain/selectors/linux/x86_64.BUILD",
        "//coswitch/templates:toolchain/selectors/linux/arm.BUILD",
        "//coswitch/templates:toolchain/selectors/macos/arm.BUILD",
        "//coswitch/templates:toolchain/selectors/macos/x86_64.BUILD",
        # "//coswitch/templates/host/bazel:BUILD.bazel",
        # "//coswitch/templates/host/build:BUILD.bazel",
        # "//coswitch/templates/host/target:BUILD.bazel",
        "//coswitch/templates:ocaml_threads.BUILD",
        "//coswitch/templates:ocaml_unix.BUILD",
    ],
    deps = [
        ":meta_lexis",
        ":meta_syntaxis",
        "//src/dune",
        "//vendored/logc"
    ],
    # ] + select({
    #     "//compilation_mode:dbg?": ["//src:debug"],
    #     "//conditions:default": []
    # }),
    visibility = ["//visibility:public"]
)

###########
# WARNING: lemon insists on #including header from same dir as .c src.
# copy_file(
#     name = "copy_syntax_hdr",
#     src = "//src/hdrs:meta_syntaxis.h",
#     out = "meta_syntaxis.h"
# )

cc_library(
    name = "meta_syntaxis",
    srcs = [
        "meta_syntaxis.c",
        "meta_syntaxis.h",

        # "//vendored/logc:log.h",
        # "//vendored/uthash:utarray.h",
        # # "//vendored/uthash:uthash.h",
        # "//vendored/uthash:utstring.h",
        ] + select({
        ":yydebug-enabled": [
            "meta_entries.c",
            "//src/hdrs:meta_entries.h"
        ],
        "//conditions:default":   []
    }),
    deps = ["//vendored/logc", "//vendored/uthash"],
    copts = CMD_FLAGS + [
        ## NOTE: generated meta_syntaxis.c includes header with full
        ## bazel path, e.g.
        ## #include "bazel-out/darwin-fastbuild/bin/external/mibl/src/findlib/meta_syntaxis.h"
        ## so we always need '-I .'
        "-I.",
        "-Isrc",

        "-Iexternal/mibl/src",
        "-I$(GENDIR)/src/hdrs",

        # "-I$(GENDIR)/src/findlib",
        # "-I$(GENDIR)/mibl/src/findlib",
        "-I$(GENDIR)/external/mibl/src/findlib",

        "-Ivendored/logc",
        "-Iexternal/mibl/vendored/logc",
        "-Ivendored/uthash",
        "-Iexternal/mibl/vendored/uthash",
    ],
    defines = select({
        ":yydebug-enabled": ["YYDEBUG", "DEBUG_TRACE"],
        "//conditions:default":   []
    }) + select({
        ":yytrace-enabled": ["YYTRACE"],
        "//conditions:default":   []
    }),
    visibility = ["//test:__subpackages__"]
)

########
lemon(
    name = "gen_meta_syntaxis",
    yy   = "meta_syntaxis.y",
    outs = ["meta_syntaxis.c","meta_syntaxis.out"],
    defines = select({
        ":yydebug-enabled": ["YYDEBUG", "DEBUG_TRACE"],
        "//conditions:default":   []
    }) + select({
        ":yytrace-enabled": ["YYTRACE"],
        "//conditions:default":   []
    }),
    visibility = ["//src/hdrs:__pkg__"]
)

###########
cc_library(
    name = "meta_lexis",
    srcs = [
        # "meta_lexer.c", "meta_lexer.h",
        "meta_lexis.c",
        "meta_lexis.h",
        # "//src/hdrs:meta_lexis.h",

        # "//src:log.c", "//vendored/logc:log.h",
        "//vendored/uthash:utarray.h",
        "//vendored/uthash:uthash.h",
        # "//vendored/uthash:utstring.h",
    ],
    # alwayslink = True,
    hdrs = [
        # "log.h",
        # "meta_lexer.h"
    ],
    copts = CMD_FLAGS + [
        # "-Iexternal/mibl/src/findlib",
        # "-I$(GENDIR)/src/hdrs", # meta_lexis.h

        "-I$(GENDIR)/src/findlib", # meta_lexis.h
        "-I$(GENDIR)/external/mibl/src/findlib",

        "-Ivendored/uthash",
        "-Iexternal/mibl/vendored/uthash",

        "-I$(GENDIR)/external/mibl/src/hdrs",
        # "-I$(GENDIR)/external/mibl/src/findlib",
        # "-I$(GENDIR)/external/mibl/src",
    ],
    # copts = [
    #     "-Ibootstrap",
    #     "-Iopam/bootstrap",
    #     "-I$(GENDIR)/bootstrap",
    #     "-I$(GENDIR)/opam/bootstrap",
    #     "-I$(GENDIR)/external/tools_opam/bootstrap"
    # ],
    visibility = ["//test:__subpackages__"]
)

########
## re2c takes a long time to build. we do not need to run it every
## time once the grammar is stable, so we put the .c file under
## version control. if you need to work on the meta lexer,
## uncomment this genrule, run it, and replace meta_lexis.c
## by the newly generated version.
# genrule(
#     name = "gen_meta_lexis",
#     outs  = ["meta_lexis.c"],
#     srcs = [
#         "meta_lexis.re",
#     ],
#     tools = ["@re2c//:re2c"],
#     cmd   = "\n".join([
#         "for f in $(locations @re2c//:re2c)",
#         "do",
#         "    if [ -f $$f ]",
#         "    then",
#         "        if [ re2c = `basename $$f` -a -x $$f ]",
#         "        then",
#         "            break",
#         "        fi",
#         "    fi",
#         "done",
#         "$$f --conditions --tags -o $(@D)/meta_lexis.c $(location meta_lexis.re)",
#     ]),
#     visibility = ["//visibility:public"]
# )

########
# CMD_HDR = "\n".join([
#     "SRC1=$(location config.c)",
#     "SRCDIR1=`dirname $$SRC1`;",
# ])

FINDLIB_MKHDRS_SRCS = [
    "emit_build_bazel.c",
    "emit_jsoo.c",
    "emit_ocaml_repo.c",
    "emit_pkg_bindir.c",
    "handlers_findlib.c",
    "meta_parser.c",
    "meta_entries.c",
    "meta_flags.c",
    # "meta_fs.c",
    "meta_packages.c",
    "meta_properties.c",
    "meta_settings.c",
    "meta_values.c",
    "meta_lexis.c",
    "meta_syntaxis.c",

        # "//src/dune:libdune.h",
    # "//vendored/uthash:utarray.c",
    # "//vendored/uthash:utarray.h",
    # "//vendored/uthash:uthash.h",
    # "//vendored/uthash:utstring.h",
    # "//src:log.c",
    # "//vendored/logc:log.h",
        "//src:utils.c",
    "//src:ansi_colors.h",
]

FINDLIB_MKHDRS_LOCNS = " ".join([
    "$(location emit_build_bazel.c)",
    "$(location emit_jsoo.c)",
    "$(location emit_ocaml_repo.c)",
    "$(location emit_pkg_bindir.c)",
    "$(location handlers_findlib.c)",
    "$(location meta_parser.c)",
    "$(location meta_entries.c)",
    "$(location meta_flags.c)",
    "$(location meta_packages.c)",
    "$(location meta_properties.c)",
    "$(location meta_settings.c)",
    "$(location meta_values.c)",
    "$(location meta_lexis.c)",
    "$(location meta_syntaxis.c)",
    # "$(location //vendored/uthash:utarray.c):", # do not emit header
    # "$(location //vendored/uthash:utarray.h)",
    # "$(location //vendored/uthash:uthash.h)",
    # "$(location //vendored/uthash:utstring.h)",
    # "$(location //src:log.c):", # do not emit header
    # "$(location //vendored/logc:log.h)",
    "$(location //src:utils.c)",
    "$(location //src/dune:libdune.h)",
    "$(location //src:ansi_colors.h)",
])

genrule(
    name = "mkhdrs",
    srcs = FINDLIB_MKHDRS_SRCS + [
    ] + select({
        "//bzl/host:linux": ["//src/linux:strlcpy.c", "//src/linux:strlcat.c"],
        "//conditions:default":   []
    # }) + select({
    #     "//compilation_mode:dbg?": ["debug_meta.c"],
    #     "//conditions:default": []
    }),
    outs = [
        "emit_build_bazel.h",
        "emit_jsoo.h",
        "emit_ocaml_repo.h",
        "emit_pkg_bindir.h",
        "handlers_findlib.h",
        "meta_parser.h",
        "meta_entries.h",
        "meta_flags.h",
        # "meta_fs.h",
        "meta_packages.h",
        "meta_properties.h",
        "meta_settings.h",
        "meta_values.h",
        "meta_lexis.h",
        "meta_syntaxis.h",
    ],
    cmd = " ".join([
        "SRC1=$(location meta_parser.c);",
        "SRCDIR1=`dirname $$SRC1`;",
        "$(location //src:makeheaders)",
        # "$(SRCS);",

        "$(location emit_build_bazel.c)",
        "$(location emit_jsoo.c)",
        "$(location emit_ocaml_repo.c)",
        "$(location emit_pkg_bindir.c)",
        "$(location meta_parser.c)",
        "$(location meta_entries.c)",
        "$(location meta_flags.c)",
        # "$(location meta_fs.c)",
        "$(location meta_packages.c)",
        "$(location meta_properties.c)",
        "$(location meta_settings.c)",
        "$(location meta_values.c)",
        "$(location meta_lexis.c)",
        "$(location meta_syntaxis.c)",
        "$(location handlers_findlib.c)",
        # "$(location debug_findlib.c)",
        # "$(location config.c)",
        # # "$(location config_mibl.c)",
        # # "$(location config_bazel.c)",
        # "$(location //vendored/uthash:utarray.c):", # do not emit header
        # "$(location //vendored/uthash:utarray.h)",
        # "$(location //vendored/uthash:uthash.h)",
        # "$(location //vendored/uthash:utstring.h)",
        # "$(location //src:log.c):", # do not emit header
        # "$(location //vendored/logc:log.h)",
        "$(location //src:utils.c)",
        # "$(location //src/dune:libdune.h)",
        "$(location //src:ansi_colors.h);",

        "cp $${SRCDIR1}/*.h $(@D)",
    ]),
    tools = ["//src:makeheaders"],
    visibility = ["//visibility:public"]
)

# genrule(
#     name = "mkhdrs_libfindlib",
#     # srcs = FINDLIB_MKHDRS_SRCS + [
#     srcs = [
#         "emit_build_bazel.c",
#         "emit_ocaml_repo.c",
#         "emit_pkg_bindir.c",
#         "meta_parser.c",
#         "meta_entries.c",
#         "meta_flags.c",
#         # "meta_fs.c",
#         "meta_packages.c",
#         "meta_properties.c",
#         "meta_settings.c",
#         "meta_values.c",
#         "meta_lexis.c",
#         "meta_syntaxis.c",

#         # "//src/dune:libdune.h",
#         # "//vendored/uthash:utarray.c",
#         # "//vendored/uthash:utarray.h",
#         # "//vendored/uthash:uthash.h",
#         # "//vendored/uthash:utstring.h",
#         # "//src:log.c",
#         # "//vendored/logc:log.h",
#         # "//src:utils.c",
#         # "//src:ansi_colors.h",
#     ] + select({
#         "//bzl/host:linux": ["//src/linux:strlcpy.c", "//src/linux:strlcat.c"],
#         "//conditions:default":   []
#     }) + select({
#         "//compilation_mode:dbg?": ["debug_meta.c"],
#         "//conditions:default": []
#     }),
#     outs = [
#         "libfindlib.h",
#     ],
#     cmd = " ".join([
#         "SRC1=$(location meta_parser.c);",
#         "SRCDIR1=`dirname $$SRC1`;",
#         "$(location //src:makeheaders) -H",
#         # "$(SRCS) \\",
#         # FINDLIB_MKHDRS_LOCNS,
#         "$(location emit_build_bazel.c)",
#         "$(location emit_ocaml_repo.c)",
#         "$(location emit_pkg_bindir.c)",
#         "$(location meta_parser.c)",
#         "$(location meta_entries.c)",
#         "$(location meta_flags.c)",
#         "$(location meta_packages.c)",
#         "$(location meta_properties.c)",
#         "$(location meta_settings.c)",
#         "$(location meta_values.c)",
#         "$(location meta_lexis.c)",
#         "$(location meta_syntaxis.c)",
#         "> $@",
#     ]),
#     tools = ["//src:makeheaders"],
#     visibility = ["//visibility:public"]
# )

genrule(
    name = "mkhdrs_debug",
    srcs = [
        "meta_parser.c",
        "meta_entries.c",
        "meta_flags.c",
        "meta_packages.c",
        "meta_properties.c",
        "meta_settings.c",
        "meta_values.c",
        "meta_lexis.c",
        "meta_syntaxis.c",
        "debug_meta.c",
        # "//vendored/logc:log.h",
        # "//vendored/uthash:utarray.c",
        # "//vendored/uthash:utarray.h",
        "//src:utils.c",
        "//src:ansi_colors.h",
    ] + select({
        "//bzl/host:linux": ["//src/linux:strlcpy.c", "//src/linux:strlcat.c"],
        "//conditions:default":   []
    }),
    outs = [
        "debug_meta.h",
    ],
    cmd = " ".join([
        "SRC1=$(location debug_meta.c);",
        "SRCDIR1=`dirname $$SRC1`;",
        "$(location //src:makeheaders)",
        # "$(SRCS);",

        "$(location meta_parser.c)",
        "$(location meta_entries.c)",
        "$(location meta_flags.c)",
        "$(location meta_packages.c)",
        "$(location meta_properties.c)",
        "$(location meta_settings.c)",
        "$(location meta_values.c)",
        "$(location meta_lexis.c)",
        "$(location meta_syntaxis.c)",
        "$(location debug_meta.c)",
        # "$(location //src:log.c):", # do not emit header
        # "$(location //vendored/logc:log.h)",
        "$(location //src:utils.c)",
        # "$(location //vendored/uthash:utarray.c):",
        # "$(location //vendored/uthash:utarray.h)",
        "$(location //src:ansi_colors.h);",

        "cp $${SRCDIR1}/*.h $(@D)",
    ]),
    tools = ["//src:makeheaders"],
    visibility = ["//visibility:public"]
)

################################################################
## enable meta ast debugging: --//bootstrap:ast-dump
bool_flag(name = "ast-dump", build_setting_default = 0)
config_setting(name = "ast-dump-enabled",
               flag_values = {":ast-dump": "True"})
config_setting(name = "ast-dump-disabled",
               flag_values = {":ast-dump": "False"})

## enable meta ast debugging: --//bootstrap:ast-trace
bool_flag(name = "ast-trace", build_setting_default = 0)
config_setting(name = "ast-trace-enabled",
               flag_values = {":ast-trace": "True"})
config_setting(name = "ast-trace-disabled",
               flag_values = {":ast-trace": "False"})

## enable parser debugging: --//bootstrap:yydebug
bool_flag(name = "yydebug", build_setting_default = 0)
config_setting(name = "yydebug-enabled", flag_values = {":yydebug": "True"})
config_setting(name = "yydebug-disabled", flag_values = {":yydebug": "False"})
bool_flag(name = "yydebug-exit-on-error", build_setting_default = 0)
config_setting(name = "yydebug-exit-on-error-enabled",
               flag_values = {":yydebug-exit-on-error": "True"})

bool_flag(name = "yytrace", build_setting_default = 0)
config_setting(name = "yytrace-enabled", flag_values = {":yytrace": "True"})
config_setting(name = "yytrace-disabled", flag_values = {":yytrace": "False"})

## debug parse rules
string_flag(name = "yydebug-rules", build_setting_default = "")
config_setting(name = "yydebug-fpf",
               flag_values = {":yydebug-rules": "fpf"})
config_setting(name = "yydebug-fvf",
               flag_values = {":yydebug-rules": "fvf"})
config_setting(name = "yydebug-filter",
               flag_values = {":yydebug-rules": "filter"})
config_setting(name = "yydebug-build-filter",
               flag_values = {":yydebug-rules": "build-filter"})

## enable lexer debugging: --//bootstrap:lexdebug
bool_flag(name = "lexdebug", build_setting_default = 0)
config_setting(name = "lexdebug-enabled", flag_values = {":lexdebug": "True"})
config_setting(name = "lexdebug-disabled", flag_values = {":lexdebug": "False"})

string_flag(name = "lexdebug-rules", build_setting_default = "")
config_setting(name = "lexdebug-version",
               flag_values = {":lexdebug-rules": "version"})
config_setting(name = "lexdebug-fpf",
               flag_values = {":lexdebug-rules": "fpf"})
config_setting(name = "lexdebug-fvf",
               flag_values = {":lexdebug-rules": "fvf"})
config_setting(name = "lexdebug-filter",
               flag_values = {":lexdebug-rules": "filter"})
config_setting(name = "lexdebug-build-filter",
               flag_values = {":lexdebug-rules": "build-filter"})

